SSB-171: fixed marketing block on tablets

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
@@ -143,6 +143,19 @@
     }
 }
 
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+    .banner-row-wrapper {
+        .image-banner-logo {
+            transform: translate(6%, -18%) !important;
+            height: auto !important;
+        }
+
+        .banner-wrapper-text-message {
+            width: 55% !important;
+        }
+    }
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1440px) {
     .banner-row-wrapper {
         max-width: 100%;
